login&home commit

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -20,7 +20,8 @@
       .header-menu {
         flex: 1;
         line-height: 64px;
-
+        text-align: left;
+        padding-left: 200px;
       }
       .header-right {
         width: 100px;
